--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Titulo de la pagina</h1>
     <p>Este cambio está realizado en Github, VSCode</p>
+    <span>Este cambio está hecho desde Vscode, no en github</span>
 </body>
 </html>
