subiendo otra vez a INT

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Titulo de la pagina</h1>
     <p>Este cambio está realizado en Github, VSCode</p>
     <span>Este cambio está hecho desde Vscode, no en github</span>
-    
+    <p>Restableciendo cambios..</p>    
 </body>
 </html>
