corregiendote la mielda

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <style href="miEstilo.css" />
 </head>
 <body>
-    <h1>Titulo de la pagina</h1>
+    <h1>Esto es una mierda</h1>
 </body>
 </html>
